fix more bugs from responsive, and adding content template for news. Plus, a dinamic sidebar [index]

--- a/src/components/main_header.module.css
+++ b/src/components/main_header.module.css
@@ -110,6 +110,7 @@
 .option2{
     padding: 10px 20px;
     color: var(--letra-color);
+    list-style: none;
 }
 .option2:hover{
     background-color: var(--color2);
