--- a/src/components/content.module.css
+++ b/src/components/content.module.css
@@ -1,3 +1,14 @@
 .main{
-    height: 1000px;
+    min-height: 1000px;
+    background-color: #e6e6e6;
+    padding: 70px 0px 70px 30px;
+
+}
+.body{
+    display: grid;
+    grid-template-columns: auto 300px;
+    row-gap: 40px;
+    grid-template-areas: 
+    "content sidebar";
+
 }
